Logo overflow fix

--- a/frontend/src/styles/LoginPage.module.sass
+++ b/frontend/src/styles/LoginPage.module.sass
@@ -62,16 +62,17 @@
 .logo
 	display: flex
 	justify-content: center
+	height: 128px
+	width: 128px
+	border-radius: 50%
+	box-shadow: $rest-shadow
+	margin: 0 auto 32px
 
 	svg
-		width: 80px
+		width: 128px
 		height: 80px
-		border-radius: 50%
 		flex-grow: 0
 		padding: 12px
-		margin-bottom: 32px
-		box-shadow: $rest-shadow
-		overflow: visible
 
 @media screen and (max-width: 420px)
 	.form
